--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="choose_wallpaper">Choose from Images</string>
     <string name="reset_wallpaper">Remove Wallpaper</string>
     <string name="choose_color">Choose color</string>
+    <string name="star_message">Star message</string>
+    <string name="star_messages">Star messages</string>
 </resources>
